# NTS-Mobile-Data-Fusion

./: .gitignore  README.md  pyproject.toml
data/raw/lookups/: EEH-MSOACDs.csv  msoa_to_region.csv
data/raw/nts/: nts9916.csv  nts9916.ods
outputs/: dashboard.html  map.html  od_tool.html  purposes.csv  server.py
outputs/matrices/typical_week_by_mode/: OD_matrix_RAIL_adjusted.csv  OD_matrix_SUBWAY_adjusted.csv  OD_matrix_WALKING_adjusted.csv
outputs/matrices/weekday_AMpeak_by_mode/: OD_matrix_RAIL_adjusted.csv  OD_matrix_SUBWAY_adjusted.csv  OD_matrix_WALKING_adjusted.csv
outputs/reassign/: adjustment_factors.csv  share_check.csv
scripts/: build_msoa_to_region_lookup.py
src/eeh_pipeline/: __init__.py  cli.py  config.py  io.py  matrix.py  reassign.py
src/eeh_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/uk_travel_pipeline/: __init__.py  cli.py  config.py  matrix.py  purpose.py  reassign.py
tests/: test_cli_main_unit.py  test_cli_unit.py  test_matrix_unit.py  test_pipeline_smoke.py  test_purpose_unit.py  test_reassign_unit.py
