[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uk-travel-pipeline"
version = "0.1.0"
description = "UK travel model reassignment and OD matrix pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dask[dataframe]>=2024.0.0",
  "geopandas>=0.14.0",
  "numpy>=1.24.0",
  "odfpy>=1.4.1",
  "pandas>=2.0.0",
  "pyarrow>=12.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[project.scripts]
uk-travel-pipeline = "uk_travel_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
